# Plague-fx

./: .gitignore  CMakeLists.txt  Plague.g1a  Plague.g3a  README.md
Sources/: CMakeLists.txt  Makefile  Plague.g1a  project.cfg
Sources/assets-fx/: fxconv-metadata.txt
Sources/build-fx/: map
Sources/build-fx/src/: Plague.elf  main.d
Sources/src/: core.c  core.h  display_engine.c  display_engine.h  main.c
assets-fx/: converters.py  fxconv-metadata.txt
assets-fx/mutations_table/: abilities_1.txt  abilities_2.txt  abilities_3.txt  fxconv-metadata.txt  symptoms_1.txt  transmissions_1.txt  transmissions_2.txt  transmissions_3.txt
assets/mutations_table/: abilities_2.txt  symptoms_2.txt  symptoms_3.txt  symptoms_4.txt
build-fx/: CMakeCache.txt  Makefile  cmake_install.cmake
old assets/: convert_world.py
src/: core.c  core.h  data.c  display_engine.c  display_engine.h  epidemic_engine.c  epidemic_engine.h  main.c  mutation_engine.c  mutation_engine.h  save.c  save.h
